Add and precise german translation strings

--- a/Interfaces/de.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/de.lproj/EmptyTrashWarning.strings
@@ -1,6 +1,6 @@
 
 /* Class = "NSWindow"; title = "Empty Trash"; ObjectID = "5"; */
-"5.title" = "Empty Trash";
+"5.title" = "Papierkorb leeren";
 
 /* Class = "NSButtonCell"; title = "Papierkorb leeren"; ObjectID = "17"; */
 "17.title" = "Papierkorb leeren";
@@ -9,7 +9,7 @@
 "18.title" = "Papierkorb NICHT leeren";
 
 /* Class = "NSTextFieldCell"; title = "Es gibt noch gelöschte Artikel im Papierkorb.\nMöchten Sie den Papierkorb vor Beenden leeren?"; ObjectID = "19"; */
-"19.title" = "Es gibt noch gelöschte Artikel im Papierkorb. Möchten Sie den Papierkorb vor Beenden leeren?";
+"19.title" = "Es gibt noch gelöschte Artikel im Papierkorb. Möchten Sie den Papierkorb vor dem Beenden leeren?";
 
 /* Class = "NSButtonCell"; title = "Diese Warnung nicht mehr anzeigen"; ObjectID = "20"; */
 "20.title" = "Diese Warnung nicht mehr anzeigen";
