--- a/Interfaces/de.lproj/SyncingPreferencesView.strings
+++ b/Interfaces/de.lproj/SyncingPreferencesView.strings
@@ -1,21 +1,21 @@
 
 /* Class = "NSTextFieldCell"; placeholderString = "Placeholder for server specific explanations"; ObjectID = "3WF-BJ-rBh"; */
-"3WF-BJ-rBh.placeholderString" = "Placeholder for server specific explanations";
+"3WF-BJ-rBh.placeholderString" = "Platzhalter für Server-spezifische Erläuterungen";
 
 /* Class = "NSTextFieldCell"; title = "Hint (Do Not Localise)"; ObjectID = "3WF-BJ-rBh"; */
-"3WF-BJ-rBh.title" = "Hint (Do Not Localise)";
+"3WF-BJ-rBh.title" = "Hinweis (Nicht lokalisieren)";
 
 /* Class = "NSButton"; ibExternalAccessibilityDescription = "Visit the website"; ObjectID = "Ar5-Qc-YTe"; */
-"Ar5-Qc-YTe.ibExternalAccessibilityDescription" = "Visit the website";
+"Ar5-Qc-YTe.ibExternalAccessibilityDescription" = "Besuche die Webseite";
 
 /* Class = "NSButton"; ibShadowedToolTip = "Visit the website"; ObjectID = "Ar5-Qc-YTe"; */
-"Ar5-Qc-YTe.ibShadowedToolTip" = "Visit the website";
+"Ar5-Qc-YTe.ibShadowedToolTip" = "Besuche die Webseite";
 
 /* Class = "NSMenu"; title = "ServicesView"; ObjectID = "LVH-iR-bmO"; */
-"LVH-iR-bmO.title" = "ServicesView";
+"LVH-iR-bmO.title" = "Service-Ansicht";
 
 /* Class = "NSButtonCell"; title = "Synchronisiere mit einem Open Reader Server"; ObjectID = "Lkv-md-rEW"; */
-"Lkv-md-rEW.title" = "Synchronisiere mit einem Open Reader Server";
+"Lkv-md-rEW.title" = "Synchronisiere mit einem Open Reader-Server";
 
 /* Class = "NSTextFieldCell"; title = "Passwort:"; ObjectID = "NKI-36-zCY"; */
 "NKI-36-zCY.title" = "Passwort:";
@@ -30,7 +30,7 @@
 "e0z-IA-uBQ.title" = "🌍";
 
 /* Class = "NSTextField"; ibShadowedToolTip = "Select a server supporting the Open Reader API"; ObjectID = "kM0-7a-obO"; */
-"kM0-7a-obO.ibShadowedToolTip" = "Select a server supporting the Open Reader API";
+"kM0-7a-obO.ibShadowedToolTip" = "Wähle einen Server der die Open Reader API unterstützt";
 
 /* Class = "NSTextFieldCell"; title = "URL: https://"; ObjectID = "tec-2d-Xej"; */
 "tec-2d-Xej.title" = "URL: https://";
@@ -39,7 +39,7 @@
 "uTl-XE-0ym.title" = "Server:";
 
 /* Class = "NSTextField"; ibShadowedToolTip = "Address of a server supporting the Open Reader API"; ObjectID = "vZE-Pl-S9H"; */
-"vZE-Pl-S9H.ibShadowedToolTip" = "Address of a server supporting the Open Reader API";
+"vZE-Pl-S9H.ibShadowedToolTip" = "Addresse des Servers der die Open Reader API unterstützt";
 
 /* Class = "NSPopUpButton"; ibExternalAccessibilityDescription = "Select a server supporting the Open Reader API"; ObjectID = "zAy-oc-zmb"; */
-"zAy-oc-zmb.ibExternalAccessibilityDescription" = "Select a server supporting the Open Reader API";
+"zAy-oc-zmb.ibExternalAccessibilityDescription" = "Wähle einen Server der die Open Reader API unterstützt";
