--- a/Interfaces/da.lproj/SearchFolder.strings
+++ b/Interfaces/da.lproj/SearchFolder.strings
@@ -1,66 +1,14 @@
-
-/* Class = "NSMenu"; title = "AndreOversigter"; ObjectID = "32"; */
-"32.title" = "AndreOversigter";
-
-/* Class = "NSMenuItem"; title = "Felt navne her"; ObjectID = "33"; */
-"33.title" = "Felt navne her";
-
-/* Class = "NSMenu"; title = "AndreOversigter"; ObjectID = "34"; */
-"34.title" = "AndreOversigter";
-
-/* Class = "NSMenuItem"; title = "Operatorer her"; ObjectID = "56"; */
-"56.title" = "Operatorer her";
-
-/* Class = "NSMenuItem"; title = "Intet"; ObjectID = "62"; */
-"62.title" = "Intet";
-
-/* Class = "NSMenu"; title = "AndreOversigter"; ObjectID = "64"; */
-"64.title" = "AndreOversigter";
-
-/* Class = "NSMenu"; title = "AndreOversigter"; ObjectID = "74"; */
-"74.title" = "AndreOversigter";
-
-/* Class = "NSMenuItem"; title = "Emne3"; ObjectID = "75"; */
-"75.title" = "Emne3";
-
-/* Class = "NSMenuItem"; title = "Emne2"; ObjectID = "76"; */
-"76.title" = "Emne2";
-
-/* Class = "NSMenu"; title = "AndreOversigter"; ObjectID = "80"; */
-"80.title" = "AndreOversigter";
-
-/* Class = "NSMenuItem"; title = "Intet"; ObjectID = "82"; */
-"82.title" = "Intet";
-
-/* Class = "NSMenu"; title = "AndreOversigter"; ObjectID = "87"; */
-"87.title" = "AndreOversigter";
-
-/* Class = "NSMenuItem"; title = "Emne1"; ObjectID = "88"; */
-"88.title" = "Emne1";
-
-/* Class = "NSMenuItem"; title = "Emne3"; ObjectID = "89"; */
-"89.title" = "Emne3";
-
-/* Class = "NSMenuItem"; title = "Emne2"; ObjectID = "90"; */
-"90.title" = "Emne2";
-
-/* Class = "NSTextFieldCell"; title = "Smartmappenavn:"; ObjectID = "94"; */
+/* Class = "NSTextFieldCell"; title = "Smart folder name:"; ObjectID = "94"; */
 "94.title" = "Smartmappenavn:";
 
-/* Class = "NSButtonCell"; title = "Gem"; ObjectID = "96"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "96"; */
 "96.title" = "Gem";
 
-/* Class = "NSButtonCell"; title = "Afbryd"; ObjectID = "97"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "97"; */
 "97.title" = "Afbryd";
 
-/* Class = "NSTextFieldCell"; title = "Vis alle artikler som matcher"; ObjectID = "98"; */
+/* Class = "NSTextFieldCell"; title = "Show all articles that match"; ObjectID = "98"; */
 "98.title" = "Vis alle artikler som matcher";
 
-/* Class = "NSTextFieldCell"; title = "under følgende forhold:"; ObjectID = "100"; */
+/* Class = "NSTextFieldCell"; title = "of the following conditions:"; ObjectID = "100"; */
 "100.title" = "under følgende forhold:";
-
-/* Class = "NSButtonCell"; title = "-"; ObjectID = "102"; */
-"102.title" = "-";
-
-/* Class = "NSButtonCell"; title = "+"; ObjectID = "104"; */
-"104.title" = "+";
