--- a/Interfaces/eu.lproj/SearchFolder.strings
+++ b/Interfaces/eu.lproj/SearchFolder.strings
@@ -1,66 +1,14 @@
-
-/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "32"; */
-"32.title" = "Bestelakoak";
-
-/* Class = "NSMenuItem"; title = "Fitxategi izenak hemen doaz"; ObjectID = "33"; */
-"33.title" = "Fitxategi izenak hemen doaz";
-
-/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "34"; */
-"34.title" = "Bestelakoak";
-
-/* Class = "NSMenuItem"; title = "Operazioak hemen doaz"; ObjectID = "56"; */
-"56.title" = "Operazioak hemen doaz";
-
-/* Class = "NSMenuItem"; title = "Ezer"; ObjectID = "62"; */
-"62.title" = "Ezer";
-
-/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "64"; */
-"64.title" = "Bestelakoak";
-
-/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "74"; */
-"74.title" = "Bestelakoak";
-
-/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "75"; */
-"75.title" = "Item3";
-
-/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "76"; */
-"76.title" = "Item2";
-
-/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "80"; */
-"80.title" = "Bestelakoak";
-
-/* Class = "NSMenuItem"; title = "Ezer"; ObjectID = "82"; */
-"82.title" = "Ezer";
-
-/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "87"; */
-"87.title" = "Bestelakoak";
-
-/* Class = "NSMenuItem"; title = "Item1"; ObjectID = "88"; */
-"88.title" = "Item1";
-
-/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "89"; */
-"89.title" = "Item3";
-
-/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "90"; */
-"90.title" = "Item2";
-
-/* Class = "NSTextFieldCell"; title = "Direktorio adimenduaren izena:"; ObjectID = "94"; */
+/* Class = "NSTextFieldCell"; title = "Smart folder name:"; ObjectID = "94"; */
 "94.title" = "Direktorio adimenduaren izena:";
 
-/* Class = "NSButtonCell"; title = "Gorde"; ObjectID = "96"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "96"; */
 "96.title" = "Gorde";
 
-/* Class = "NSButtonCell"; title = "Ezeztatu"; ObjectID = "97"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "97"; */
 "97.title" = "Ezeztatu";
 
-/* Class = "NSTextFieldCell"; title = "Erakutsi zerikusia duten artikulu guztiak"; ObjectID = "98"; */
+/* Class = "NSTextFieldCell"; title = "Show all articles that match"; ObjectID = "98"; */
 "98.title" = "Erakutsi zerikusia duten artikulu guztiak";
 
-/* Class = "NSTextFieldCell"; title = "honako baldintzekin:"; ObjectID = "100"; */
+/* Class = "NSTextFieldCell"; title = "of the following conditions:"; ObjectID = "100"; */
 "100.title" = "honako baldintzekin:";
-
-/* Class = "NSButtonCell"; title = "-"; ObjectID = "102"; */
-"102.title" = "-";
-
-/* Class = "NSButtonCell"; title = "+"; ObjectID = "104"; */
-"104.title" = "+";
