--- a/Interfaces/nl.lproj/SearchFolder.strings
+++ b/Interfaces/nl.lproj/SearchFolder.strings
@@ -1,66 +1,14 @@
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "32"; */
-"32.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Veldnamen komen hier"; ObjectID = "33"; */
-"33.title" = "Veldnamen komen hier";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "34"; */
-"34.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Operators go here"; ObjectID = "56"; */
-"56.title" = "Operators go here";
-
-/* Class = "NSMenuItem"; title = "Niets"; ObjectID = "62"; */
-"62.title" = "Niets";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "64"; */
-"64.title" = "OtherViews";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "74"; */
-"74.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "75"; */
-"75.title" = "Item3";
-
-/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "76"; */
-"76.title" = "Item2";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "80"; */
-"80.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Niets"; ObjectID = "82"; */
-"82.title" = "Niets";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "87"; */
-"87.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Item1"; ObjectID = "88"; */
-"88.title" = "Item1";
-
-/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "89"; */
-"89.title" = "Item3";
-
-/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "90"; */
-"90.title" = "Item2";
-
-/* Class = "NSTextFieldCell"; title = "Naam voor slimme map:"; ObjectID = "94"; */
+/* Class = "NSTextFieldCell"; title = "Smart folder name:"; ObjectID = "94"; */
 "94.title" = "Naam voor slimme map:";
 
-/* Class = "NSButtonCell"; title = "Bewaar"; ObjectID = "96"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "96"; */
 "96.title" = "Bewaar";
 
-/* Class = "NSButtonCell"; title = "Annuleer"; ObjectID = "97"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "97"; */
 "97.title" = "Annuleer";
 
-/* Class = "NSTextFieldCell"; title = "Toon de artikelen die voldoen aan:"; ObjectID = "98"; */
+/* Class = "NSTextFieldCell"; title = "Show all articles that match"; ObjectID = "98"; */
 "98.title" = "Toon de artikelen die voldoen aan:";
 
-/* Class = "NSTextFieldCell"; title = "van de volgende voorwaarden:"; ObjectID = "100"; */
+/* Class = "NSTextFieldCell"; title = "of the following conditions:"; ObjectID = "100"; */
 "100.title" = "van de volgende voorwaarden:";
-
-/* Class = "NSButtonCell"; title = "-"; ObjectID = "102"; */
-"102.title" = "-";
-
-/* Class = "NSButtonCell"; title = "+"; ObjectID = "104"; */
-"104.title" = "+";
