--- a/Interfaces/tr.lproj/SearchFolder.strings
+++ b/Interfaces/tr.lproj/SearchFolder.strings
@@ -1,66 +1,14 @@
-
-/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "32"; */
-"32.title" = "DiğerGörünümler";
-
-/* Class = "NSMenuItem"; title = "Alan adları buraya yazılır"; ObjectID = "33"; */
-"33.title" = "Alan adları buraya yazılır";
-
-/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "34"; */
-"34.title" = "DiğerGörünümler";
-
-/* Class = "NSMenuItem"; title = "Operatörler buraya yazılır"; ObjectID = "56"; */
-"56.title" = "Operatörler buraya yazılır";
-
-/* Class = "NSMenuItem"; title = "Hiçbir şey"; ObjectID = "62"; */
-"62.title" = "Hiçbir şey";
-
-/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "64"; */
-"64.title" = "DiğerGörünümler";
-
-/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "74"; */
-"74.title" = "DiğerGörünümler";
-
-/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "75"; */
-"75.title" = "Item3";
-
-/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "76"; */
-"76.title" = "Item2";
-
-/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "80"; */
-"80.title" = "DiğerGörünümler";
-
-/* Class = "NSMenuItem"; title = "Hiçbir şey"; ObjectID = "82"; */
-"82.title" = "Hiçbir şey";
-
-/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "87"; */
-"87.title" = "DiğerGörünümler";
-
-/* Class = "NSMenuItem"; title = "Item1"; ObjectID = "88"; */
-"88.title" = "Item1";
-
-/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "89"; */
-"89.title" = "Item3";
-
-/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "90"; */
-"90.title" = "Item2";
-
-/* Class = "NSTextFieldCell"; title = "Akıllı klasör adı:"; ObjectID = "94"; */
+/* Class = "NSTextFieldCell"; title = "Smart folder name:"; ObjectID = "94"; */
 "94.title" = "Akıllı klasör adı:";
 
-/* Class = "NSButtonCell"; title = "Kaydet"; ObjectID = "96"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "96"; */
 "96.title" = "Kaydet";
 
-/* Class = "NSButtonCell"; title = "İptal"; ObjectID = "97"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "97"; */
 "97.title" = "İptal";
 
-/* Class = "NSTextFieldCell"; title = "Uyan tüm makaleleri göster"; ObjectID = "98"; */
+/* Class = "NSTextFieldCell"; title = "Show all articles that match"; ObjectID = "98"; */
 "98.title" = "Uyan tüm makaleleri göster";
 
-/* Class = "NSTextFieldCell"; title = "şu koşulları içeren:"; ObjectID = "100"; */
+/* Class = "NSTextFieldCell"; title = "of the following conditions:"; ObjectID = "100"; */
 "100.title" = "şu koşulları içeren:";
-
-/* Class = "NSButtonCell"; title = "-"; ObjectID = "102"; */
-"102.title" = "-";
-
-/* Class = "NSButtonCell"; title = "+"; ObjectID = "104"; */
-"104.title" = "+";
