--- a/Interfaces/uk.lproj/SearchFolder.strings
+++ b/Interfaces/uk.lproj/SearchFolder.strings
@@ -1,66 +1,14 @@
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "32"; */
-"32.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Назви полів"; ObjectID = "33"; */
-"33.title" = "Назви полів";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "34"; */
-"34.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Оператори"; ObjectID = "56"; */
-"56.title" = "Оператори";
-
-/* Class = "NSMenuItem"; title = "Нічого"; ObjectID = "62"; */
-"62.title" = "Нічого";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "64"; */
-"64.title" = "OtherViews";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "74"; */
-"74.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "75"; */
-"75.title" = "Item3";
-
-/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "76"; */
-"76.title" = "Item2";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "80"; */
-"80.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Нічого"; ObjectID = "82"; */
-"82.title" = "Нічого";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "87"; */
-"87.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Item1"; ObjectID = "88"; */
-"88.title" = "Item1";
-
-/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "89"; */
-"89.title" = "Item3";
-
-/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "90"; */
-"90.title" = "Item2";
-
-/* Class = "NSTextFieldCell"; title = "Назва вибірки:"; ObjectID = "94"; */
+/* Class = "NSTextFieldCell"; title = "Smart folder name:"; ObjectID = "94"; */
 "94.title" = "Назва вибірки:";
 
-/* Class = "NSButtonCell"; title = "Зберегти"; ObjectID = "96"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "96"; */
 "96.title" = "Зберегти";
 
-/* Class = "NSButtonCell"; title = "Скасувати"; ObjectID = "97"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "97"; */
 "97.title" = "Скасувати";
 
-/* Class = "NSTextFieldCell"; title = "Показати всі статті, які відповідають"; ObjectID = "98"; */
+/* Class = "NSTextFieldCell"; title = "Show all articles that match"; ObjectID = "98"; */
 "98.title" = "Показати всі статті, які відповідають";
 
-/* Class = "NSTextFieldCell"; title = "з наступних умов:"; ObjectID = "100"; */
+/* Class = "NSTextFieldCell"; title = "of the following conditions:"; ObjectID = "100"; */
 "100.title" = "з наступних умов:";
-
-/* Class = "NSButtonCell"; title = "-"; ObjectID = "102"; */
-"102.title" = "-";
-
-/* Class = "NSButtonCell"; title = "+"; ObjectID = "104"; */
-"104.title" = "+";
