--- a/Interfaces/zh-Hans.lproj/SearchFolder.strings
+++ b/Interfaces/zh-Hans.lproj/SearchFolder.strings
@@ -1,66 +1,14 @@
+/* Class = "NSTextFieldCell"; title = "Smart folder name:"; ObjectID = "94"; */
+"94.title" = "智能文件夹名称:";
 
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "32"; */
-"32.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Field names go here"; ObjectID = "33"; */
-"33.title" = "Field names go here";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "34"; */
-"34.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Operators go here"; ObjectID = "56"; */
-"56.title" = "Operators go here";
-
-/* Class = "NSMenuItem"; title = "Nothing"; ObjectID = "62"; */
-"62.title" = "Nothing";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "64"; */
-"64.title" = "OtherViews";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "74"; */
-"74.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "75"; */
-"75.title" = "Item3";
-
-/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "76"; */
-"76.title" = "Item2";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "80"; */
-"80.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Nothing"; ObjectID = "82"; */
-"82.title" = "Nothing";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "87"; */
-"87.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Item1"; ObjectID = "88"; */
-"88.title" = "Item1";
-
-/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "89"; */
-"89.title" = "Item3";
-
-/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "90"; */
-"90.title" = "Item2";
-
-/* Class = "NSTextFieldCell"; title = "智能文件夹名称:\n"; ObjectID = "94"; */
-"94.title" = "智能文件夹名称:\n";
-
-/* Class = "NSButtonCell"; title = "保存"; ObjectID = "96"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "96"; */
 "96.title" = "保存";
 
-/* Class = "NSButtonCell"; title = "取消"; ObjectID = "97"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "97"; */
 "97.title" = "取消";
 
-/* Class = "NSTextFieldCell"; title = "显示所有符合"; ObjectID = "98"; */
+/* Class = "NSTextFieldCell"; title = "Show all articles that match"; ObjectID = "98"; */
 "98.title" = "显示所有符合";
 
-/* Class = "NSTextFieldCell"; title = "以下条件的条目:"; ObjectID = "100"; */
+/* Class = "NSTextFieldCell"; title = "of the following conditions:"; ObjectID = "100"; */
 "100.title" = "以下条件的条目:";
-
-/* Class = "NSButtonCell"; title = "-"; ObjectID = "102"; */
-"102.title" = "-";
-
-/* Class = "NSButtonCell"; title = "+"; ObjectID = "104"; */
-"104.title" = "+";
