--- a/Interfaces/cs.lproj/SyncingPreferencesView.strings
+++ b/Interfaces/cs.lproj/SyncingPreferencesView.strings
@@ -1,35 +1,22 @@
-
-/* Class = "NSTextFieldCell"; placeholderString = "Zástupce pro vysvětlení specifická pro daný server"; ObjectID = "3WF-BJ-rBh"; */
-"3WF-BJ-rBh.placeholderString" = "Zástupce pro vysvětlení specifická pro daný server";
-
-/* Class = "NSTextFieldCell"; title = "Hint (Do Not Localise)"; ObjectID = "3WF-BJ-rBh"; */
-"3WF-BJ-rBh.title" = "Hint (Do Not Localise)";
-
-/* Class = "NSButton"; ibExternalAccessibilityDescription = "Navštívit webovou stránku"; ObjectID = "Ar5-Qc-YTe"; */
+/* Class = "NSButton"; ibExternalAccessibilityDescription = "Visit the website"; ObjectID = "Ar5-Qc-YTe"; */
 "Ar5-Qc-YTe.ibExternalAccessibilityDescription" = "Navštívit webovou stránku";
 
-/* Class = "NSButton"; ibShadowedToolTip = "Navštívit webovou stránku"; ObjectID = "Ar5-Qc-YTe"; */
+/* Class = "NSButton"; ibShadowedToolTip = "Visit the website"; ObjectID = "Ar5-Qc-YTe"; */
 "Ar5-Qc-YTe.ibShadowedToolTip" = "Navštívit webovou stránku";
 
-/* Class = "NSMenu"; title = "ServicesView"; ObjectID = "LVH-iR-bmO"; */
-"LVH-iR-bmO.title" = "ServicesView";
-
-/* Class = "NSButtonCell"; title = "Synchronizovat s Open Reader serverem"; ObjectID = "Lkv-md-rEW"; */
+/* Class = "NSButtonCell"; title = "Sync with an Open Reader server"; ObjectID = "Lkv-md-rEW"; */
 "Lkv-md-rEW.title" = "Synchronizovat s Open Reader serverem";
 
-/* Class = "NSTextFieldCell"; title = "Heslo:"; ObjectID = "NKI-36-zCY"; */
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "NKI-36-zCY"; */
 "NKI-36-zCY.title" = "Heslo:";
 
-/* Class = "NSTextFieldCell"; title = "Jméno:"; ObjectID = "O2q-8o-CSb"; */
+/* Class = "NSTextFieldCell"; title = "Login:"; ObjectID = "O2q-8o-CSb"; */
 "O2q-8o-CSb.title" = "Jméno:";
-
-/* Class = "NSMenuItem"; title = "URL"; ObjectID = "RMd-14-2Bl"; */
-"RMd-14-2Bl.title" = "URL";
 
 /* Class = "NSButtonCell"; title = "🌍"; ObjectID = "e0z-IA-uBQ"; */
 "e0z-IA-uBQ.title" = "🌍";
 
-/* Class = "NSTextField"; ibShadowedToolTip = "Vyberte server podporující Open Reader API"; ObjectID = "kM0-7a-obO"; */
+/* Class = "NSTextField"; ibShadowedToolTip = "Select a server supporting the Open Reader API"; ObjectID = "kM0-7a-obO"; */
 "kM0-7a-obO.ibShadowedToolTip" = "Vyberte server podporující Open Reader API";
 
 /* Class = "NSTextFieldCell"; title = "URL: https://"; ObjectID = "tec-2d-Xej"; */
@@ -38,8 +25,8 @@
 /* Class = "NSTextFieldCell"; title = "Server:"; ObjectID = "uTl-XE-0ym"; */
 "uTl-XE-0ym.title" = "Server:";
 
-/* Class = "NSTextField"; ibShadowedToolTip = "Adresa serveru podporujícího Open Reader API"; ObjectID = "vZE-Pl-S9H"; */
+/* Class = "NSTextField"; ibShadowedToolTip = "Address of a server supporting the Open Reader API"; ObjectID = "vZE-Pl-S9H"; */
 "vZE-Pl-S9H.ibShadowedToolTip" = "Adresa serveru podporujícího Open Reader API";
 
-/* Class = "NSPopUpButton"; ibExternalAccessibilityDescription = "Vyberte server podporující Open Reader API"; ObjectID = "zAy-oc-zmb"; */
+/* Class = "NSPopUpButton"; ibExternalAccessibilityDescription = "Select a server supporting the Open Reader API"; ObjectID = "zAy-oc-zmb"; */
 "zAy-oc-zmb.ibExternalAccessibilityDescription" = "Vyberte server podporující Open Reader API";
